--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/styles.css">
+    
         <title>WebStudio</title>
     </head>
     
@@ -18,7 +19,7 @@
            <nav class="head__nav">    
                 <a class="logo" href="./index.html">Web<span class="logo_span">Studio</span></a>
              <ul class="head__nav-list">
-                <li class="head-nav__li">
+                <li class="head-nav__li active">
                     <a class="head-nav__link" href="./index.html">Studio</a>
                 </li>
                 <li class="head-nav__li">
@@ -55,6 +56,11 @@
                 <h2 class="visually-hidden">Benefits</h2>
                     <ul class="methody__flex">
                         <li class="methody__block">
+                            <div class="methody__icon-cover">
+                                <svg class="icon icon-b1">
+                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                </svg>                              
+                            </div>
                             <h3 class="methody__title">Strategy</h3>
                             <p class="methody__text">Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.</p>
