--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
            <nav class="head__nav">    
                 <a class="logo" href="./index.html">Web<span class="logo_span">Studio</span></a>
              <ul class="head__nav-list">
-                <li class="head-nav__li active">
-                    <a class="head-nav__link" href="./index.html">Studio</a>
+                <li class="head-nav__li ">
+                    <a class="head-nav__link active" href="./index.html">Studio</a>
                 </li>
                 <li class="head-nav__li">
                     <a class="head-nav__link" href="">Portfolio</a>
