--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <ul class="methody__flex">
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1">
+                                <svg class="icon icon-b1" width="64" height="64">
                                     <use xlink:href="./images/icons.svg#icon-b1"></use>
                                 </svg>                              
                             </div>
@@ -66,14 +66,29 @@
                                 problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li class="methody__block">
+                            <div class="methody__icon-cover">
+                                <svg class="icon icon-b1" width="64" height="64">
+                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                </svg>                              
+                            </div>
                             <h3 class="methody__title">Punctuality</h3>
                             <p class="methody__text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="methody__block">
+                            <div class="methody__icon-cover">
+                                <svg class="icon icon-b1" width="64" height="64">
+                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                </svg>                              
+                            </div>
                             <h3 class="methody__title">Diligence</h3>
                             <p class="methody__text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="methody__block">
+                            <div class="methody__icon-cover">
+                                <svg class="icon icon-b1" width="64" height="64">
+                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                </svg>                              
+                            </div>
                             <h3 class="methody__title">
                                 Technologies
                             </h3>
