--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li class="methody__block">
                             <div class="methody__icon-cover">
                                 <svg class="icon icon-b1" width="64" height="64">
-                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                    <use href="./images/icons.svg#icon-b2"></use>
                                 </svg>                              
                             </div>
                             <h3 class="methody__title">Punctuality</h3>
@@ -77,7 +77,7 @@
                         <li class="methody__block">
                             <div class="methody__icon-cover">
                                 <svg class="icon icon-b1" width="64" height="64">
-                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                    <use href="./images/icons.svg#icon-b3"></use>
                                 </svg>                              
                             </div>
                             <h3 class="methody__title">Diligence</h3>
@@ -86,7 +86,7 @@
                         <li class="methody__block">
                             <div class="methody__icon-cover">
                                 <svg class="icon icon-b1" width="64" height="64">
-                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
+                                    <use href="./images/icons.svg#icon-b4"></use>
                                 </svg>                              
                             </div>
                             <h3 class="methody__title">
