--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </li>
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1" width="64" height="64">
+                                <svg class="icon" width="64" height="64">
                                     <use href="./images/icons.svg#icon-b2"></use>
                                 </svg>                              
                             </div>
@@ -85,7 +85,7 @@
                         </li>
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1" width="64" height="64">
+                                <svg class="icon icon-b4" width="64" height="64">
                                     <use href="./images/icons.svg#icon-b4"></use>
                                 </svg>                              
                             </div>
