--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                     <ul class="methody__flex">
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1" width="64" height="64">
-                                    <use xlink:href="./images/icons.svg#icon-b1"></use>
-                                </svg>                              
+                                <svg class="icon icon-b1" width="64" height="64"><use xlink:href="./images/icons.svg#icon-b1"></use></svg>                              
                             </div>
                             <h3 class="methody__title">Strategy</h3>
                             <p class="methody__text">Our goal is to identify the business
@@ -67,27 +65,21 @@
                         </li>
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon" width="64" height="64">
-                                    <use href="./images/icons.svg#icon-b2"></use>
-                                </svg>                              
+                                <svg class="icon" width="64" height="64"><use href="./images/icons.svg#icon-b2"></use></svg>                              
                             </div>
                             <h3 class="methody__title">Punctuality</h3>
                             <p class="methody__text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1" width="64" height="64">
-                                    <use href="./images/icons.svg#icon-b3"></use>
-                                </svg>                              
+                                <svg class="icon icon-b1" width="64" height="64"><use href="./images/icons.svg#icon-b3"></use></svg>                              
                             </div>
                             <h3 class="methody__title">Diligence</h3>
                             <p class="methody__text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b4" width="64" height="64">
-                                    <use href="./images/icons.svg#icon-b4"></use>
-                                </svg>                              
+                                <svg class="icon icon-b4" width="64" height="64"><use href="./images/icons.svg#icon-b4"></use></svg>                              
                             </div>
                             <h3 class="methody__title">
                                 Technologies
