--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <ul class="methody__flex">
                         <li class="methody__block">
                             <div class="methody__icon-cover">
-                                <svg class="icon icon-b1" width="64" height="64"><use xlink:href="./images/icons.svg#icon-b1"></use></svg>                              
+                                <svg class="icon icon-b1" width="64" height="64"><use href="./images/icons.svg#icon-b1"></use></svg>                              
                             </div>
                             <h3 class="methody__title">Strategy</h3>
                             <p class="methody__text">Our goal is to identify the business
