--- a/index.html
+++ b/index.html
@@ -235,9 +235,14 @@
             </h2>
             <ul class="portfolio__ul">
                 <li class="portfolio__list">
-                    <img src="./images/portfolio1.jpg" alt="img" class="portfolio__image" width="360">
+                    <div class="portfolio__list-top-cover">
+                        <img src="./images/portfolio1.jpg" alt="img" class="portfolio__image" width="360">
+                        <p class="portfolio__hidden-p">
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
                     <div class="portfolio__list-cover">
-<h3 class="portfolio__list-title">
+                    <h3 class="portfolio__list-title">
                         Banking App
                     </h3>
                     <p class="portfolio__list-text">
@@ -247,7 +252,12 @@
                 </li>
 
                 <li class="portfolio__list">
+                    <div class="portfolio__list-top-cover">
                     <img src="./images/portfolio2.jpg" alt="img" class="portfolio__image" width="360">
+                    <p class="portfolio__hidden-p">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                     <div class="portfolio__list-cover">
                     <h3 class="portfolio__list-title">
                         Cashless Payment
@@ -259,7 +269,12 @@
                 </li>
 
                 <li class="portfolio__list">
+                    <div class="portfolio__list-top-cover">
                     <img src="./images/portfolio3.jpg" alt="img" class="portfolio__image" width="360">
+                    <p class="portfolio__hidden-p">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                     <div class="portfolio__list-cover">
                     <h3 class="portfolio__list-title">
                         Meditation App
@@ -271,7 +286,12 @@
                 </li>
 
                 <li class="portfolio__list">
+                    <div class="portfolio__list-top-cover">
                     <img src="./images/portfolio4.jpg" alt="img" class="portfolio__image" width="360">
+                    <p class="portfolio__hidden-p">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                     <div class="portfolio__list-cover">
                     <h3 class="portfolio__list-title">
                         Taxi Service
@@ -283,7 +303,12 @@
                 </li>
 
                 <li class="portfolio__list">
+                    <div class="portfolio__list-top-cover">
                     <img src="./images/portfolio5.jpg" alt="img" class="portfolio__image" width="360">
+                    <p class="portfolio__hidden-p">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                     <div class="portfolio__list-cover">
                     <h3 class="portfolio__list-title">
                         Screen Illustrations
@@ -295,7 +320,12 @@
                 </li>
 
                 <li class="portfolio__list">
+                    <div class="portfolio__list-top-cover">
                     <img src="./images/portfolio6.jpg" alt="img" class="portfolio__image" width="360">
+                    <p class="portfolio__hidden-p">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                     <div class="portfolio__list-cover">
                     <h3 class="portfolio__list-title">
                         Online Courses
