--- a/index.html
+++ b/index.html
@@ -341,8 +341,7 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="container">
-            <div class="footer__flex">
+        <div class="container footer__flex">
                 <div class="footer__info-cover">
                     <a class="logo footer__logo" href="./index.html">Web<span class="logo_span logo-footer__span">Studio</span></a>
                     <p class="footer__info">
@@ -376,7 +375,7 @@
                         </li>
                     </ul>
                 </div>                
-            </div>
+           
         </div>
  
     
