--- a/index.html
+++ b/index.html
@@ -352,25 +352,25 @@
                     <p class="footer__contacts-text">
                         Social media
                     </p>
-                    <ul class="team__soc-list">
+                    <ul class="footer__soc-list team__soc-list">
                         <li class="team__soc-item">
-                            <a href="#" class="team__soc-link">
-                                <svg class="team__soc-icon icon icon-b1" width="16" height="16"><use href="./images/icons.svg#icon-sm1"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link">
+                                <svg class="team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm1"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="team__soc-link">
-                                <svg class="team__soc-icon icon icon-b1" width="16" height="16"><use href="./images/icons.svg#icon-sm2"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link">
+                                <svg class="team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm2"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="team__soc-link">
-                                <svg class="team__soc-icon icon icon-b1" width="16" height="16"><use href="./images/icons.svg#icon-sm3"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link">
+                                <svg class="team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm3"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="team__soc-link">
-                                <svg class="team__soc-icon icon icon-b1" width="16" height="16"><use href="./images/icons.svg#icon-sm4"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link">
+                                <svg class="team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm4"></use></svg>                              
                             </a>
                         </li>
                     </ul>
