--- a/index.html
+++ b/index.html
@@ -354,19 +354,19 @@
                     </p>
                     <ul class="footer__soc-list team__soc-list">
                         <li class="team__soc-item">
-                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm1"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm1"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm2"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm2"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm3"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm3"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
-                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon team__soc-icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm4"></use></svg>                              
+                            <a href="#" class="footer__soc-link team__soc-link"><svg class="footer__icon icon icon-b1" width="24" height="24"><use href="./images/icons.svg#icon-sm4"></use></svg>                              
                             </a>
                         </li>
                     </ul>
