--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <footer class="footer">
         <div class="container footer__flex">
                 <div class="footer__info-cover">
-                    <a class="logo footer__logo" href="./index.html">Web<span class="logo_span logo-footer__span">Studio</span></a>
+                    <a class="footer__logo logo " href="./index.html">Web<span class="logo_span logo-footer__span">Studio</span></a>
                     <p class="footer__info">
                         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>            
