--- a/index.html
+++ b/index.html
@@ -354,22 +354,22 @@
                     <ul class="footer__soc-list team__soc-list">
                         <li class="team__soc-item">
                             <a href="#" class="footer__soc-link team__soc-link">
-                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-sm1"></use></svg>                              
+                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-fsm1"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
                             <a href="#" class="footer__soc-link team__soc-link">
-                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-sm2"></use></svg>                              
+                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-fsm2"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
                             <a href="#" class="footer__soc-link team__soc-link">
-                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-sm3"></use></svg>                              
+                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-fsm3"></use></svg>                              
                             </a>
                         </li>
                         <li class="team__soc-item">
                             <a href="#" class="footer__soc-link team__soc-link">
-                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-sm4"></use></svg>                              
+                                <svg class="footer__icon" width="24" height="24"><use href="./images/icons.svg#icon-fsm4"></use></svg>                              
                             </a>
                         </li>
                     </ul>
